@@ -1,4 +1,4 @@
-/* $Id: tiffcp.c,v 1.43 2010-03-10 18:56:50 bfriesen Exp $ */
+/* $Id: tiffcp.c,v 1.44 2010-06-03 17:01:02 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -92,6 +92,7 @@ static void usage(void);
 static char comma = ',';  /* (default) comma separator character */
 static TIFF* bias = NULL;
 static int pageNum = 0;
+static int pageInSeq = 0;
 
 static int nextSrcImage (TIFF *tif, char **imageSpec)
 /*
@@ -170,7 +171,7 @@ main(int argc, char* argv[])
 
 	*mp++ = 'w';
 	*mp = '\0';
-	while ((c = getopt(argc, argv, ",:b:c:f:l:o:z:p:r:w:aistBLMC8")) != -1)
+	while ((c = getopt(argc, argv, ",:b:c:f:l:o:z:p:r:w:aistBLMC8x")) != -1)
 		switch (c) {
 		case ',':
 			if (optarg[0] != '=') usage();
@@ -257,6 +258,9 @@ main(int argc, char* argv[])
 			break;
 		case '8':
 			*mp++ = '8'; *mp = '\0';
+			break;
+		case 'x':
+			pageInSeq = 1;
 			break;
 		case '?':
 			usage();
@@ -402,6 +406,7 @@ char* stuff[] = {
 " -c g4           compress output with CCITT Group 4 encoding",
 " -c sgilog       compress output with SGILOG encoding",
 " -c none         use no compression algorithm on output",
+" -x              force the merged tiff pages in sequence",
 "",
 "Group 3 options:",
 " 1d              use default CCITT Group 3 1D-encoding",
@@ -733,11 +738,21 @@ tiffcp(TIFF* in, TIFF* out)
 	}
 	{
 		unsigned short pg0, pg1;
-		if (TIFFGetField(in, TIFFTAG_PAGENUMBER, &pg0, &pg1)) {
-			if (pageNum < 0) /* only one input file */
-				TIFFSetField(out, TIFFTAG_PAGENUMBER, pg0, pg1);
-			else
+
+		if (pageInSeq == 1) {
+			if (pageNum < 0) /* only one input file */ {
+				if (TIFFGetField(in, TIFFTAG_PAGENUMBER, &pg0, &pg1))
+					TIFFSetField(out, TIFFTAG_PAGENUMBER, pg0, pg1);
+			} else
 				TIFFSetField(out, TIFFTAG_PAGENUMBER, pageNum++, 0);
+
+		} else {
+			if (TIFFGetField(in, TIFFTAG_PAGENUMBER, &pg0, &pg1)) {
+				if (pageNum < 0) /* only one input file */
+					TIFFSetField(out, TIFFTAG_PAGENUMBER, pg0, pg1);
+				else
+					TIFFSetField(out, TIFFTAG_PAGENUMBER, pageNum++, 0);
+			}
 		}
 	}
 
