@@ -1,3 +1,10 @@
+2010-06-03  Oliver Chen Feng <scip8183@gmail.com>
+
+	* libtiff/tools/tiffcp.c: add a new option -x to force merged tiff
+	file PAGENUMBER value in sequence for users who care the page
+	sequence, this will also prevent tiff2pdf from creating pdf file from
+	the merged tiff file with wrong page sequence.
+
 2010-05-08  Olivier Paquet  <olivier.paquet@gmail.com>
 
 	* libtiff/tif_dirread.c: Restored TIFFReadDirEntryFloat function in order
